force-app/main/default/objects/CAZ_Assessment2__dlm/fields/tbc_averagesaleamount__c.field-meta.xml
<CustomField>
    <fullName>tbc_averagesaleamount__c</fullName>
    <label>Average Sale Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Average Sale Amount</labelOverride>
        <masterLabel>Average Sale Amount</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>