force-app/main/default/objects/CAZ_Assessment2__dlm/fields/tbc_cashflowsintobusiness__c.field-meta.xml
<CustomField>
    <fullName>tbc_cashflowsintobusiness__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cash Flows Into Business</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Cash Flows Into Business</labelOverride>
        <masterLabel>Cash Flows Into Business</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>