force-app/main/default/objects/CAZ_Assessment2__dlm/fields/tbc_discussedworkingcapitalposition__c.field-meta.xml
<CustomField>
    <fullName>tbc_discussedworkingcapitalposition__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Discussed Working Capital Position</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Discussed Working Capital Position</labelOverride>
        <masterLabel>Discussed Working Capital Position</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>