force-app/main/default/objects/CAZ_Assessment2__dlm/fields/tbc_doyouimportexport__c.field-meta.xml
<CustomField>
    <fullName>tbc_doyouimportexport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do You Import Export</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Do You Import Export</labelOverride>
        <masterLabel>Do You Import Export</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>