force-app/main/default/objects/CAZ_Assessment2__dlm/fields/tbc_monthswithcashshortfall__c.field-meta.xml
<CustomField>
    <fullName>tbc_monthswithcashshortfall__c</fullName>
    <label>Months With Cash Shortfall</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Months With Cash Shortfall</labelOverride>
        <masterLabel>Months With Cash Shortfall</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>