force-app/main/default/objects/CAZ_Assessment2__dlm/fields/tbc_monthswithsurpluscashtype__c.field-meta.xml
<CustomField>
    <fullName>tbc_monthswithsurpluscashtype__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Months With Surplus Cash Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Months With Surplus Cash Type</labelOverride>
        <masterLabel>Months With Surplus Cash Type</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>