force-app/main/default/objects/CAZ_Assessment2__dlm/fields/tbc_payinasingleday__c.field-meta.xml
<CustomField>
    <fullName>tbc_payinasingleday__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pay In A Single Day</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Pay In A Single Day</labelOverride>
        <masterLabel>Pay In A Single Day</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>