force-app/main/default/objects/CAZ_Assessment2__dlm/fields/tbc_providemerchantstatement__c.field-meta.xml
<CustomField>
    <fullName>tbc_providemerchantstatement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Provide Merchant Statement</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Provide Merchant Statement</labelOverride>
        <masterLabel>Provide Merchant Statement</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>