force-app/main/default/objects/CAZ_Assessment2__dlm/fields/tbc_receivepayincurrencycurrency__c.field-meta.xml
<CustomField>
    <fullName>tbc_receivepayincurrencycurrency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Receive Pay In Currency Currency</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Receive Pay In Currency Currency</labelOverride>
        <masterLabel>Receive Pay In Currency Currency</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>