force-app/main/default/objects/CAZ_Assessment2__dlm/fields/tbc_transactionspermonth__c.field-meta.xml
<CustomField>
    <fullName>tbc_transactionspermonth__c</fullName>
    <label>Transactions Per Month</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Transactions Per Month</labelOverride>
        <masterLabel>Transactions Per Month</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>