force-app/main/default/objects/CAZ_Assessment2__dlm/fields/tell_me_about_your_business__c.field-meta.xml
<CustomField>
    <fullName>tell_me_about_your_business__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tell Me About Your Business</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Tell Me About Your Business</labelOverride>
        <masterLabel>Tell Me About Your Business</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>