force-app/main/default/objects/CAZ_Assessment2__dlm/fields/your_solutions_personal__c.field-meta.xml
<CustomField>
    <fullName>your_solutions_personal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Your Solutions Personal</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Your Solutions Personal</labelOverride>
        <masterLabel>Your Solutions Personal</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>